# AceDex

./: .env.development  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/populate_database/: Cargo.toml
src-tauri/populate_database/src/: main.rs  model.rs  pokemon.rs
src-tauri/src/: commands.rs  database.rs  lib.rs  main.rs  model.rs  pokemon.rs
src/api/: api.ts
src/cocktails/: cocktails.tsx
src/components/: card.tsx  layout.tsx  modal.tsx
src/components/footer/: footer.tsx
src/components/header/: collectionLink.tsx  header.tsx
src/components/header/collection/: collection.tsx
src/components/header/models/: navigation.ts
src/models/: cocktails.ts  colorConfig.ts  item.ts  pokemon.ts  recipe.ts  sizeConfig.ts
src/pokemon/: pokemon.tsx  pokemonCard.tsx  skeleton.tsx
src/services/: useCocktails.ts  usePokemon.ts  useRecipes.ts
src/utils/: converter.ts
